--- a/index.html
+++ b/index.html
@@ -15,53 +15,51 @@
         <div class="slide">
 
             <!--Imagenes de fondos CORAZÓN :>-->
-            <div class="item" style="background-image: url(microchip.avif);">
+            <div class="item" style="background-image: url(pexels_6.jpg);">
                 <div class="content">
-                    <div class="name"><h2>PRODUCTO.</h2>
-                        <Ol><h6>1]: De qué trata nuestro producto.</h6></Ol>
-                        <ul>
-                            <li><h6>¿Cuales son sus utilidades?</h6></li>
-                            <li><h6>¿Qué beneficios tiene?</h6></li>
-                            <li><h6>¿Cuál es nuestro plan?</h6></li>
-                        </ul>
-                        <Ol><h6>3]: ¿En qué ayudaría?</h6></Ol>
-                    </div>
-                    <div class="des"></div>
-                    
+                    <div class="name"><h2>8-9</h2></div>
+                    <div class="des">La vaca lola 1, la vaca lola 1, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <button><b>Ver más</b></button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(microchip2.webp);">
-                <div class="content">
-                    <div class="name"><h2>INGRESOS</h2></div>
-                    <Ul>
-                        <li class="puppo">fondos</li>
-                        <li class="puppo">Alquiler</li>
-                        <li class="puppo">Subscripción</li>
-                        <li class="puppo">Venta de producto</li>
-                    </Ul>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(Sordera\ futurista.jpg);">
-                <div class="content">
-                    <div class="name"><h2 class="puppy">COLABORACIÓN</h2></div>
-                    <p class="puppy">Empresas farmaceuticas</p>
-                    <p class="puppy">--Dispositivo versatil--</p>
-                    <p class="puppy">Empresas tecnologicas</p>
-                    <Ul>
-                        <li class="puppy">Indigo tecnologíes S.A.S</li>
-                        <li class="puppy">REDELECTRON</li>
-                    </Ul>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(SGente\ de\ empresa\ feliz\ porque\ si.jpg);">
-                <div class="content">
-                    <div class="Tec">TECNICA</div>
-                    <h6 class="puppy">Buscar inversionistas; Institucionales, fondos.</h6>
-                    <Ul>
-                        <li class="puppy">Hacernos notar</li>
-                        <li class="puppy">Pitch</li>
-                    </Ul>
 
+            <div class="item" style="background-image: url(Pexels_1.jpg);">
+                <div class="content">
+                    <div class="name"><h2>1</h2></div>
+                    <div class="des">La vaca lola 2, la vaca lola 2, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <a href="DAV.html"><button class="Btt"><b><i class="fa-solid fa-plus"></i></b></button></a>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(pexels_2.jpg);">
+                <div class="content">
+                    <div class="name"><h2>2-4</h2></div>
+                    <div class="des">La vaca lola 3, la vaca lola 3, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <button><b>Ver más</b></button>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(pexels_3.jpg);">
+                <div class="content">
+                    <div class="name"><h2 style="color: black;">3</h2></div>
+                    <div class="des">La vaca lola 4, la vaca lola 4, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <button><b>Ver más</b></button>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(pexels_4.jpg);">
+                <div class="content">
+                    <div class="name"><h2>5</h2></div>
+                    <div class="des">La vaca lola 5, la vaca lola 5, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <button><b>Ver más</b></button>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(pexels_5.jpg);">
+                <div class="content">
+                    <div class="name"><h2 style="color: black;">6-7</h2></div>
+                    <div class="des">La vaca lola 6, la vaca lola 6, tiene cabeza y tiene cola... Y hace MOOOOOOOooooooo.</div>
+                    <button><b>Ver más</b></button>
                 </div>
             </div>
             <!--Fin de imagenes de fondo CORAZÓN :>-->
